--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  main:
+  medical-api:
     container_name: medical.api.dev
     build:
       context: .
@@ -18,8 +18,8 @@ services:
     networks:
       - medical-network
     depends_on:
-      - postgres
-  postgres:
+      - medical-db
+  medical-db:
     container_name: medical.postgres
     image: postgres:14
     networks:
@@ -27,20 +27,20 @@ services:
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_DB: ${DB_DATABASE_NAME}
+      POSTGRES_DB: ${DB_NAME}
       PG_DATA: /var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - ${DB_PORT}:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
-  adminer:
+  medical-adminer:
     container_name: medical.adminer
     image: adminer
     restart: always
     ports:
       - 8081:8080
     depends_on:
-      - postgres
+      - medical-db
     networks:
       - medical-network
 networks:
