--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:create": "ts-node ./node_modules/.bin/typeorm migration:create",
+    "migration:up": "ts-node ./node_modules/.bin/typeorm migration:run -d ./src/config/orm.config.ts",
+    "migration:down": "ts-node ./node_modules/.bin/typeorm migration:revert -d ./src/config/orm.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -51,7 +54,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   },
