--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "migration:down": "ts-node ./node_modules/.bin/typeorm migration:revert -d ./src/config/orm.config.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.179.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
