--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ DB_PORT=
 DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
+
+AWS_COGNITO_REGION=
+AWS_COGNITO_ACCESS_KEY_ID=
+AWS_COGNITO_SECRET_ACCESS_KEY=
+AWS_COGNITO_USER_POOL_ID=
+AWS_COGNITO_CLIENT_ID=
