--- a/package.json
+++ b/package.json
@@ -75,6 +75,13 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^app/(.*)$": "<rootDir>/application/$1",
+      "^config/(.*)$": "<rootDir>/config/$1",
+      "^controllers/(.*)$": "<rootDir>/presentation/controllers/$1",
+      "^infrastructure/(.*)$": "<rootDir>/infrastructure/$1",
+      "^views/(.*)$": "<rootDir>/presentation/views/$1"
+    }
   }
 }
