feat: cognito service implementation sign in, sign up, confirm sign up errors interseptor auth controller ZZMED-22

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "tabWidth": 2
 }
