--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "singleQuote": true,
   "trailingComma": "all",
   "endOfLine": "lf",
-  "bracketSpacing": true,
-  "tabWidth": 2
+  "bracketSpacing": false,
+  "tabWidth": 4
 }
