--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:create": "ts-node ./node_modules/.bin/typeorm migration:create",
-    "migration:up": "ts-node ./node_modules/.bin/typeorm migration:run -d ./src/config/orm.config.ts",
-    "migration:down": "ts-node ./node_modules/.bin/typeorm migration:revert -d ./src/config/orm.config.ts"
+    "migration:create": "ts-node ./node_modules/typeorm/cli migration:create",
+    "migration:up": "ts-node ./node_modules/typeorm/cli migration:run -d ./src/config/orm.config.ts",
+    "migration:down": "ts-node ./node_modules/typeorm/cli migration:revert -d ./src/config/orm.config.ts"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.179.0",
