--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ AWS_COGNITO_ACCESS_KEY_ID=
 AWS_COGNITO_SECRET_ACCESS_KEY=
 AWS_COGNITO_USER_POOL_ID=
 AWS_COGNITO_CLIENT_ID=
+
+MAIL_HOST="mailhog"
+MAIL_SMTP_PORT=1025
+MAIL_WEB_PORT=8025
