--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,20 +43,20 @@ services:
       - medical-db
     networks:
       - medical-network
-  mailhog:
-    image: mailhog/mailhog:latest
-    container_name: medical.mailhog
-    restart: always
-    environment:
-      - MH_STORAGE=maildir
-      - MH_MAILDIR_PATH=maildir
-    volumes:
-      - ./mailhog:/home/mailhog
-    ports:
-      - ${MAIL_SMTP_PORT}:1025
-      - ${MAIL_WEB_PORT}:8025
-    networks:
-      - medical-network
+#  mailhog:
+#    image: mailhog/mailhog:latest
+#    container_name: medical.mailhog
+#    restart: always
+#    environment:
+#      - MH_STORAGE=maildir
+#      - MH_MAILDIR_PATH=maildir
+#    volumes:
+#      - ./mailhog:/home/mailhog
+#    ports:
+#      - ${MAIL_SMTP_PORT}:1025
+#      - ${MAIL_WEB_PORT}:8025
+#    networks:
+#      - medical-network
 networks:
   medical-network:
 volumes:
