change: branch to deploy to server

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -34,7 +34,7 @@ definitions:
                 
 pipelines:
   branches:
-    master:
+    dev:
       - step:
           <<: *deploy-to-server
           deployment: Develop
