feat: subscribe to a room feat: add static pages
ZZMED-124

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
       "root/*": ["*"],
       "src/*": ["src/*"],
       "views/*": ["src/presentation/views/*"],
-      "tests/*": ["src/test/*"]
+      "tests/*": ["test/*"],
     }
   }
 }
