--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_NAME=
+AWS_PUBLIC_FILE_URL=https://zenzers-medical-dev.s3.amazonaws.com/avatars/
 
 AWS_COGNITO_USER_POOL_ID=
 AWS_COGNITO_CLIENT_ID=
