--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ AWS_PUBLIC_FILE_URL=https://zenzers-medical-dev.s3.amazonaws.com/avatars/
 AWS_COGNITO_USER_POOL_ID=
 AWS_COGNITO_CLIENT_ID=
 
+JWKS={}
+
 MAIL_SERVICE="Amazon_SES|Mailhog"
 MAIL_HOST="mailhog"
 MAIL_SMTP_PORT=1025
