ZZMED-354: AWS_COGNITO_JWKS

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,7 @@ AWS_PUBLIC_FILE_URL=https://zenzers-medical-dev.s3.amazonaws.com/avatars/
 
 AWS_COGNITO_USER_POOL_ID=
 AWS_COGNITO_CLIENT_ID=
-
-JWKS={}
+AWS_COGNITO_JWKS={}
 
 MAIL_SERVICE="Amazon_SES|Mailhog"
 MAIL_HOST="mailhog"
