ZZMED-121: Unit tests

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -32,6 +32,7 @@ definitions:
                 docker container prune -f
                 docker image prune -a -f
                 docker exec -it medical.api.dev npm run migration:up
+                docker exec -it medical.api.dev npm run test
                 
 pipelines:
   branches:
