ZZMED-433: branch.io

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ AWS_COGNITO_USER_POOL_ID=
 AWS_COGNITO_CLIENT_ID=
 AWS_COGNITO_JWKS={}
 
+BRANCH_IO_APP_ID=
+BRANCH_IO_KEY=
+BRANCH_IO_SECRET=
+
 MAIL_SERVICE="Amazon_SES|Mailhog"
 MAIL_HOST="mailhog"
 MAIL_SMTP_PORT=1025
@@ -23,3 +27,6 @@ MAIL_WEB_PORT=8025
 MAIL_FROM_DOMAIN=""
 
 CRON_AVAILABLE=false
+
+MOBILE_APP_URL=
+WEB_APP_URL=
