--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/websockets": "^9.1.6",
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1251.0",
+    "branchio-sdk": "^1.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
