--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -47,3 +47,16 @@ pipelines:
           <<: *deploy-to-server
           deployment: Staging
           name: deploy to stage
+    swarm-ci:
+      - step:
+          <<: *deploy-to-server
+          script:
+            - pipe: atlassian/ssh-run:0.4.1
+              variables:
+                SSH_USER: $USER
+                SERVER: $SERVER_DO
+                COMMAND: |
+                  export DOCKER_BUILDKIT=1
+                  cd /var/www/${WORK_DIR}/api/
+                  pwd
+                  ls -latrh
