--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -34,6 +34,32 @@ definitions:
                 docker exec -it medical.api.dev npm install
                 docker exec -it medical.api.dev npm run migration:up
                 docker exec -it medical.api.dev npm run test:e2e
+    - step: &deploy-to-swarm
+        name: deploy-to-server
+        size: 2x
+        script:
+          - |
+             git clone git@bitbucket.org:abnk/devops.git
+             cd devops
+             apt-get update
+             apt-get install python3-pip -y
+             pip3 install hvac
+             python3 env_gen.py --project ${VAULT_PATH} --token ${VAULT_TOKEN}
+          - pipe: atlassian/rsync-deploy:0.8.1
+            variables:
+              USER: $USER
+              SERVER: $SERVER_DO
+              REMOTE_PATH: "/var/www/${WORK_DIR}/api/.env"
+              LOCAL_PATH: ".env"
+          - pipe: atlassian/ssh-run:0.4.1
+            variables:
+              SSH_USER: $USER
+              SERVER: $SERVER_DO
+              COMMAND: |
+                export DOCKER_BUILDKIT=1
+                export WORK_DIR=stage
+                cd /var/www/${WORK_DIR}/api/
+                ls -latrh
                 
 pipelines:
   branches:
@@ -49,14 +75,4 @@ pipelines:
           name: deploy to stage
     swarm-ci:
       - step:
-          <<: *deploy-to-server
-          script:
-            - pipe: atlassian/ssh-run:0.4.1
-              variables:
-                SSH_USER: $USER
-                SERVER: $SERVER_DO
-                COMMAND: |
-                  export DOCKER_BUILDKIT=1
-                  cd /var/www/${WORK_DIR}/api/
-                  pwd
-                  ls -latrh
+          <<: *deploy-to-swarm
