--- a/stack-stage.yaml
+++ b/stack-stage.yaml
@@ -2,13 +2,12 @@ version: '3.8'
 
 services:
   medical-api:
-    container_name: medical.api.dev
     image: api-medical-api:latest
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
     ports:
-      - ${SERVER_PORT}:${SERVER_PORT}
+      - 3000:3000
       - 9229:9229
     command: npm run start:debug
     env_file:
@@ -24,17 +23,15 @@ services:
       placement:
         constraints: [node.role == manager]
   medical-db:
-    container_name: medical.postgres
     image: postgres:14
     networks:
       - medical-network
+    env_file:
+      - .env
     environment:
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_DB: ${DB_NAME}
       PG_DATA: /var/lib/postgresql/data
     ports:
-      - ${DB_PORT}:5432
+      - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
     deploy:
@@ -44,9 +41,7 @@ services:
       placement:
         constraints: [node.role == manager]
   medical-adminer:
-    container_name: medical.adminer
     image: adminer
-    restart: always
     ports:
       - 8081:8080
     depends_on:
