--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -61,6 +61,12 @@ definitions:
                 cd /var/www/${WORK_DIR}/api/
                 docker build -f Dockerfile -t api-medical-api:latest --target development .
                 docker stack deploy --with-registry-auth -c stack-stage.yaml medical-api-stage
+          - pipe: atlassian/ssh-run:0.4.2
+            variables:
+              SSH_USER: $USER
+              SERVER: $SERVER_DO
+              MODE: 'script'
+              COMMAND: 'stack-stage-migrations.sh'
 
 pipelines:
   branches:
