bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -57,7 +57,6 @@ definitions:
               SERVER: $SERVER_DO
               COMMAND: |
                 export DOCKER_BUILDKIT=1
-                export WORK_DIR=stage
                 cd /var/www/${WORK_DIR}/api/
                 docker build -f Dockerfile -t api-medical-api:latest --target development .
                 docker stack deploy --with-registry-auth -c stack-stage.yaml medical-api-stage
@@ -65,8 +64,9 @@ definitions:
             variables:
               SSH_USER: $USER
               SERVER: $SERVER_DO
-              MODE: 'script'
-              COMMAND: './stack-stage-migrations.sh'
+              COMMAND: |
+                cd /var/www/${WORK_DIR}/api/
+                bash -x ./stack-stage-migrations.sh
 
 pipelines:
   branches:
