refactor: move support to the root dir refactor: eliminate dependency from application layer in the domain layer
ZZMED-293

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "presentation/*": ["src/presentation/*"],
       "root/*": ["*"],
       "src/*": ["src/*"],
+      "support/*": ["src/support/*"],
       "views/*": ["src/presentation/views/*"],
       "tests/*": ["test/*"],
     }
