--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
       "^controllers/(.*)$": "<rootDir>/presentation/controllers/$1",
       "^domain/(.*)$": "<rootDir>/domain/$1",
       "^infrastructure/(.*)$": "<rootDir>/infrastructure/$1",
+      "^support/(.*)$": "<rootDir>/support/$1",
       "^views/(.*)$": "<rootDir>/presentation/views/$1"
     }
   }
